Fix border on mobile

--- a/shared/styles/styles.css
+++ b/shared/styles/styles.css
@@ -8,11 +8,10 @@
     position: fixed;
     top: 0;
     left: 0;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding: 10px;
+    height: 20px;
     z-index: 999;
     width: 100%;
-    height: 5vh;
 }
 
     .ubiquitous-dark-topnav a {
@@ -20,7 +19,6 @@
         display: block;
         color: #f2f2f2;
         text-align: center;
-        padding: 10px 10px;
         text-decoration: none;
     }
 
@@ -28,3 +26,13 @@
             background-color: #ddd;
             color: black;
         }
+
+
+@media screen and (max-width: 500px) {
+    .ubiquitous-dark-topnav {
+        padding: 5px;
+        z-index: 999;
+        width: 100%;
+        height: 20px;
+    }
+}
